--- a/index.html
+++ b/index.html
@@ -66,6 +66,23 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="col-6 col-md-6 col-lg-12 col-xl-12">
+                                            <div class="card shadow-sm">
+                                                <div class="card-body">
+                                                    <!--  Graph/chart showing the security threats lately-->
+                                                    <div class="card-title"> </div>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-6 col-md-6 col-lg-12 col-xl-12">
+                                            <div class="card shadow-sm">
+                                                <div class="card-body">
+                                                    <div class="card-title">Hotspot</div>
+                                                    
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </main>
                                 <footer class="d-flex justify-content-center text-secondary">Copyright @AgroSec 2024</footer> 
