changes to the Readme file

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                                         <div class="col-6 col-md-6 col-lg-12 col-xl-12">
                                             <div class="card shadow-sm">
                                                 <div class="card-body">
-                                                    <!--  Graph/chart showing the security threats lately-->
+                                                    <!--  Graph/chart showing the security threats lately okay show the latest 
+                                                    threat in the state use bar chart and show the highest 5 and their rating either
+                                                high -->
                                                     <div class="card-title"> </div>
 
                                                 </div>
@@ -89,7 +91,11 @@
                             </div>
                         </div>
                       </div>
-                      <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">...</div>
+                      <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">
+                        <div class="carret">
+                            
+                        </div>
+                      </div>
                       <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab" tabindex="0">...</div>
                       <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab" tabindex="0">...</div>
                     </div>
