--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="navigation">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="d-flex align-items-start">
                     
@@ -108,9 +108,43 @@
                       </div>
                       <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">
                         <div class="carret">
-                            <header></header>
-                            <main>
-                                
+                            <header>
+                                <div class="card text-bg-dark">
+                                    <img src="./main.jpg" class="card-img" alt="...">
+                                    <div class="card-img-overlay">
+                                      <h5 class="card-title">AgroSec Book Store </h5>
+                                      <p class="card-text">The more that you read, the more things you will know. The more that you learn, the more places you'll go</p>
+                                      <p class="card-text"><small>- Dr. Seuss</small></p>
+                                    </div>
+                                  </div>
+                            </header>
+                            <main class="my-2">
+                                <div class="row">
+                                    <div class="col-4 col-md-4 col-lg-4 col-xl-4">
+                                        <div class="card">
+                                            <img src="./booksBackground.jpg" class="card-img-top" alt="...">
+                                            <div class="card-body">
+                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4 col-md-4 col-lg-4 col-xl-4">
+                                        <div class="card">
+                                            <img src="./booksBackground.jpg" class="card-img-top" alt="...">
+                                            <div class="card-body">
+                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4 col-md-4 col-lg-4 col-xl-4">
+                                        <div class="card">
+                                            <img src="./booksBackground.jpg" class="card-img-top" alt="...">
+                                            <div class="card-body">
+                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </main>
                             <footer class="d-flex justify-content-center text-secondary">Copyright @AgroSec 2024</footer> 
                         </div>
