Changes to index and Creation of Signup
Added the structure for the Front-end, create the signup page so finish the structure for the signup next then onto styling

--- a/index.html
+++ b/index.html
@@ -10,24 +10,32 @@
     <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-heatmap.min.js"></script> 
     <script src="https://cdn.plot.ly/plotly-2.29.1.min.js" charset="utf-8"></script>
     <style>
-        .Hotspot{
-            width: 100%;
-            margin: 0;
-            padding: 0;
-            height: 400px;
-        }
-        .title{
-          font-size: .675em;
-        }
-        .housetag{
-          background: rgba(222, 184, 135, 0.7);
-          color: white;
-          border: 1px solid rgba(222, 184, 135,1);
-          border-radius: 12px;
-          padding: 2px 5px;
-          margin: 5px;
-        }
-    </style>
+      .Hotspot{
+          width: 100%;
+          margin: 0;
+          padding: 0;
+          height: 400px;
+          background-color: #008000; /* Deep Green */
+          color: #FFFFFF; /* White text color */
+      }
+      .title{
+        font-size: .675em;
+      }
+      .housetag{
+        /*background: rgba(222, 184, 135, 0.7);*/
+        background: rgba(222, 184, 135, 0.7); /* Earthy Brown */
+        color: white;
+        border: 1px solid rgba(222, 184, 135,1);
+        border-radius: 12px;
+        padding: 2px 5px;
+        margin: 5px;
+       a{
+        color: black;
+        text-decoration: none;
+        
+       } 
+      }
+  </style>
 </head>
 <body>
     <div class="navigation">
@@ -205,7 +213,17 @@
                           </div>
                         </div>
                       </div>
-                      <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab" tabindex="0">...</div>
+                      <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab" tabindex="0">
+                        <div class="container">
+                          <h3>Settings</h3>
+                          <div class="row">
+                            <div><a href="#">Account</a></div>
+                            <div><a href="#">App Language</a></div>
+                            <div><a href="#">Notification</a></div>
+                            <div><a href="#">Help</a></div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                   </div>
             </div>
