--- a/signup.html
+++ b/signup.html
@@ -4,16 +4,46 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AgroSec - Sign in</title>
+        <style>
+            body{
+                margin: 0;
+                padding:0;
+            }
+            .rom{
+                display:flex;
+            }
+            .signin{
+                display: flex;
+                justify-content: space-evenly;
+            }
+        </style>
     </head>
     <body>
         <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-12 col-lg-8 col-xl-8">
-                    <img src="./main.jpg" alt="Sign up Image">
+            <div class="rom">
+                <div class="">
+                    <div class="card text-bg-dark">
+                        <img src="./Rectangle 38.png" class="card-img" alt="...">
+                      </div>  
                 </div>
-                <div class="col-12 col-md-12 col-lg-4 col-xl-4">
-                    <div class="row">
-                        
+                <div class="signin">
+                    <div class="">
+                        <div class="head">
+                            <h1>AgroSec</h1>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center align-items-center">
+                        <div class="body">
+                            <form action="">
+                                <label for="email">Email </label>
+                                <input type="email" name="email" id="email">
+                                <label for="password">Password</label>
+                                <input type="password" name="password" id="password">
+                            </form>
+                        </div>
+                        <div class="footer">
+                            <a href="index.html">Sign in</a>
+                        </div>
                     </div>
                 </div>
             </div>
