--- a/signup.html
+++ b/signup.html
@@ -3,50 +3,122 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">    
         <title>AgroSec - Sign in</title>
         <style>
             body{
-                margin: 0;
-                padding:0;
+                background-color: #bae8e8;
             }
-            .rom{
-                display:flex;
+            #rom{
+                /* display:flex;
+                justify-content: space-between; */
+                background-color: #fffffe;
             }
             .signin{
-                display: flex;
-                justify-content: space-evenly;
+                /* display: flex;
+                justify-content: center; */
+                /* background-color: #fffffe; */
+                background-color: #bae8e8;
+
+            }
+            .signin > .head{
+                color: #272343;
+            }
+            label{
+                color: #2d334a;
+            }
+            .button{
+                background-color: #ffd803 !important;
+                color: #272343 !important;
+                font-size: 10px;
+                font-weight: bold !important;
+            }
+            input{
+                display: block;
+                margin-top: 0.5em;
+                margin-bottom: 1em;
+            }
+            .toggle{
+                width: 50px;
+                height: 25px;
+                border: none;
+                margin: 18px;
+                background-color: #004643;
+                cursor: pointer;
+                border-radius: 25px;
+                position: relative;
+            }
+            .toggle::before{
+                content: '';
+                position: absolute;
+                top: 2.5px;
+                left: 3px;
+                width: 20px;
+                height: 20px;
+                border: none;
+                border-radius: 50%;
+                background: #bae8e8;
+                transition: 0.6s ease-in-out;
+            }
+            .toggler{
+                background-color: #bae8e8;
+            }
+            .toggler::before{
+                background-color: #004643;
+                transform: translateX(29px);
+            }
+            body.toogled{
+                background-color: #004643;
+                color: #fffffe;
+            }
+            
+            .togglede{
+                background-color: #004643;
             }
         </style>
     </head>
     <body>
         <div class="container">
-            <div class="rom">
-                <div class="">
-                    <div class="card text-bg-dark">
-                        <img src="./Rectangle 38.png" class="card-img" alt="...">
+            <div class="row" id="rom">
+                <div class="col-12 col-md-12 col-lg-8 col-xl-8 col-xxl-8">
+                    <div class="">
+                        <img src="./Rectangle 38.png" class="img-sizing" alt="...">
                       </div>  
                 </div>
-                <div class="signin">
-                    <div class="">
-                        <div class="head">
-                            <h1>AgroSec</h1>
-                        </div>
+                <div class="col-12 col-md-12 col-lg-4 col-xl-4 col-xxl-4 d-flex flex-column justify-content-between signin" id="sign">
+                    <div class="head d-flex justify-content-between">
+                        <h1>AgroSec</h1>
+                        <button class="toggle" id="toggleBtn"></button>
                     </div>
                     <div class="row justify-content-center align-items-center">
                         <div class="body">
                             <form action="">
                                 <label for="email">Email </label>
-                                <input type="email" name="email" id="email">
+                                <input type="email" class="form-control" name="email" id="email" required>
                                 <label for="password">Password</label>
-                                <input type="password" name="password" id="password">
+                                <input type="password" class="form-control" name="password" id="password"  required>
+                                <button type="submit" class="btn btn-sm button">Sign in</button>
                             </form>
                         </div>
-                        <div class="footer">
-                            <a href="index.html">Sign in</a>
-                        </div>
+                        
+                    </div>
+                    <div class="footer">
+                        <a href="index.html">AgroSec @2024</a>
                     </div>
                 </div>
             </div>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+        <script>
+            const toggleBtn = document.getElementById('toggleBtn')
+            toggleBtn.addEventListener('click',()=>{
+                document.body.classList.toggle('toogled');
+                toggleBtn.classList.toggle('toggler');
+                document.getElementById('sign').classList.toggle('togglede')
+                //Save the Current State of the toggle button
+                localStorage.setItem('toggleState', document.body.classList.contains('toogled')? 'true' : 'false');
+            })
+        </script>
     </body>
 <html>
