--- a/index.html
+++ b/index.html
@@ -9,25 +9,7 @@
     <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-core.min.js"></script>
     <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-heatmap.min.js"></script> 
     <script src="https://cdn.plot.ly/plotly-2.29.1.min.js" charset="utf-8"></script>
-    <style>
-        .Hotspot{
-            width: 100%;
-            margin: 0;
-            padding: 0;
-            height: 400px;
-        }
-        .title{
-          font-size: .675em;
-        }
-        .housetag{
-          background: rgba(222, 184, 135, 0.7);
-          color: white;
-          border: 1px solid rgba(222, 184, 135,1);
-          border-radius: 12px;
-          padding: 2px 5px;
-          margin: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="navigation">
@@ -44,7 +26,7 @@
                     </div>
                     <div class="tab-content" id="v-pills-tabContent">
                       <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab" tabindex="0">
-                        <div class="container">
+                        <div class="container" id="container">
                             <div class="row">
                                 <header class="d-flex justify-content-between my-2">
                                     <div class="profile d-flex">
@@ -115,6 +97,32 @@
                                 <footer class="d-flex justify-content-center text-secondary">Copyright @AgroSec 2024</footer> 
                             </div>
                         </div>
+                        <div class="complain-data">
+                          <div class="container">
+                            <div class="row">
+                              <h2 class="lodge-complain">Lodge your complains</h2>
+                              <div class="co-g col-md-6 col-lg-6">
+                                <div class="card" id="secIssue">
+                                  <div class="card-body">
+                                    <div class="card-title secIssue">Security Issue</div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="co-g col-md-6 col-lg-6">
+                                <div class="card">
+                                  <div class="card-body">
+                                    <div class="card-title secIssue">Agriculture Issue</div>
+                                  </div>
+                                </div>
+                              </div>
+                              <hr class="my-3">
+                              <div id="Sec-Agri-form-container">
+
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="take-data"></div>
                       </div>
                       <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">
                         <div class="carret">
@@ -211,8 +219,8 @@
             </div>
         </div>
     </div>
- 
-
+    
+    <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script>
         function getData() {
