added three pdf books and some styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-heatmap.min.js"></script> 
     <script src="https://cdn.plot.ly/plotly-2.29.1.min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css">
+    <style>
+      body{
+        background: #bae8e8;
+      }
+    </style>
 </head>
 <body>
     <div class="navigation">
@@ -102,7 +107,7 @@
                           <div class="container">
                             <div class="row">
                               <h2 class="lodge-complain">Lodge your complains</h2>
-                              <div class="co-g col-md-6 col-lg-6">
+                              <div class="co-g col-md-6 col-lg-6 mb-2">
                                 <div class="card" id="secIssue">
                                   <div class="card-body">
                                     <div class="card-title secIssue">Security Issue</div>
@@ -171,7 +176,12 @@
                                   <!-- <div><i class="bi bi-arrow-left"></i> </div> -->
                                   <div class="col-6 col-md-6 col-lg-6 col-xl-6">
                                     <div class="head"><img src="./Ellipse 68.png" alt="image" width="20px" height="20px"><small class="title p-2">Agriculture on the Rising</small></div>
-                                    <div class="main"> <a href="#"><strong>Agriculture is the way forward in our time and era</strong></a></div>
+                                    <div class="main"> <a href="#" id="reads"><strong>Agriculture is the way forward in our time and era</strong></a></div>
+                                    <div class="footer">March 10th, 2024 . 5 min read</div>
+                                  </div>
+                                  <div class="col-6 col-md-6 col-lg-6 col-xl-6">
+                                    <div class="head"><img src="./Ellipse 68.png" alt="image" width="20px" height="20px"><small class="title p-2">Agriculture on the Rising</small></div>
+                                    <div class="main"> <a href="#" id="reads"><strong>The Future of Urban Agriculture: Vertical Farming and Rooftop Gardens</strong></a></div>
                                     <div class="footer">March 10th, 2024 . 5 min read</div>
                                   </div>
                                 </div>
