--- a/index.html
+++ b/index.html
@@ -128,7 +128,10 @@
                             </div>
                           </div>
                         </div>
-                        <div class="take-data"></div>
+                        <!--Instead of this maybe when the user click it-->
+                        <div class="take-data">
+                          <button class="btn btn-sm">Downoad Details</button>
+                        </div>
                       </div>
                       <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">
                         <div class="carret">
