Changes for the looks

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                         <div class="card">
                                             <img src="./booksBackground.jpg" class="card-img-top" alt="...">
                                             <div class="card-body">
-                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                              <p class="card-text">Environmental Studies</p>
                                               <button class="button" id="downloadButton">Click Here</button>
                                             </div>
                                         </div>
@@ -161,7 +161,8 @@
                                         <div class="card">
                                             <img src="./booksBackground.jpg" class="card-img-top" alt="...">
                                             <div class="card-body">
-                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                              <p class="card-text">Principle of Environment</p>
+                                              <button class="button" id="downloadButton">Click Here</button>
                                             </div>
                                         </div>
                                     </div>
@@ -169,7 +170,8 @@
                                         <div class="card">
                                             <img src="./booksBackground.jpg" class="card-img-top" alt="...">
                                             <div class="card-body">
-                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                              <p class="card-text">IAS Environment</p>
+                                              <button class="button" id="downloadButton">Click Here</button>
                                             </div>
                                         </div>
                                     </div>
@@ -200,9 +202,9 @@
                             <div class="card h-100">
                               <img src="./house1.jpg" class="card-img-top" alt="...">
                               <div class="card-body">
-                                <h5 class="card-title">House 45 Apo Resettlement</h5>
+                                <h5 class="card-title">Ikoyi Resettlement</h5>
                                 <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
-                                <a href="#" class="btn btn-primary">Check it</a>
+                                <a href="#" class="btn btn-secondary">Check it</a>
                               </div>
                             </div>
                           </div>
@@ -210,9 +212,9 @@
                             <div class="card h-100">
                               <img src="./house1.jpg" class="card-img-top" alt="...">
                               <div class="card-body">
-                                <h5 class="card-title">House 45 Apo Resettlement</h5>
+                                <h5 class="card-title">Kuje, Abuja</h5>
                                 <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
-                                <a href="#" class="btn btn-primary">Check it</a>
+                                <a href="#" class="btn btn-secondary">Check it</a>
                               </div>
                             </div>
                           </div>
@@ -220,9 +222,9 @@
                             <div class="card h-100">
                               <img src="./house1.jpg" class="card-img-top" alt="...">
                               <div class="card-body">
-                                <h5 class="card-title">House 45 Apo Resettlement</h5>
+                                <h5 class="card-title">Akure, Ondo</h5>
                                 <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
-                                <a href="#" class="btn btn-primary">Check it</a>
+                                <a href="#" class="btn btn-secondary">Check it</a>
                               </div>
                             </div>
                           </div>
