--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                         <div class="col-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4 mb-3">
                                             <div class="card shadow-sm">
                                                 <div class="card-body">
-                                                    <div class="card-title">Lodge a Complaint</div>
+                                                    <div class="card-title">Find </div>
                                                     <button class="btn btn-secondary"><i class="bi bi-arrow-right"></i></button>
                                                 </div>
                                             </div>
@@ -106,7 +106,7 @@
                         <div class="complain-data">
                           <div class="container">
                             <div class="row">
-                              <h2 class="lodge-complain">Lodge your complains</h2>
+                              <div class=""><a href="#"><i class="bi bi-arrow-left"></i></a><h2 class="lodge-complain">Lodge your complains</h2></div>
                               <div class="co-g col-md-6 col-lg-6 mb-2">
                                 <div class="card" id="secIssue">
                                   <div class="card-body">
