--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                             <!-- <input type="search" placeholder="Enter your Search here" class="form-control">
                                             <button class="btn btn-sm"></button> -->
                                         </form>
-                                        <div class="notification"><i class="bi bi-bell"></i></div>
+                                        <div class="notification py-2"><i class="bi bi-bell"></i></div>
                                     </div>
                                 </header>
                                 <main>
@@ -122,10 +122,12 @@
                                 </div>
                               </div>
                               <hr class="my-3">
-                              <div id="Sec-Agri-form-container d-flex justify-content-center">
+                              <div id="Sec-Agri-form-container" class="d-flex justify-content-center">
 
                               </div>
-                              <div class="Agri-Form-container"></div>
+                              <div id="Agri-Form-container" class="d-flex justify-content-center">
+
+                              </div>
                             </div>
                           </div>
                         </div>
