--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                                             <!-- <input type="search" placeholder="Enter your Search here" class="form-control">
                                             <button class="btn btn-sm"></button> -->
                                         </form>
-                                        <div class="notification py-2"><i class="bi bi-bell"></i></div>
+                                        <div class="notification py-2 ps-1"><i class="bi bi-bell"></i></div>
+                                        <div class="weather-icon"></div><!--We can add a weather checking Icon here to check the weather today-->
                                     </div>
                                 </header>
                                 <main>
@@ -66,7 +67,7 @@
                                         <div class="col-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4 mb-3">
                                             <div class="card shadow-sm">
                                                 <div class="card-body">
-                                                    <div class="card-title">Find </div>
+                                                    <div class="card-title">Connect Your Devices </div><!--Version 2.0 -->
                                                     <button class="btn btn-secondary"><i class="bi bi-arrow-right"></i></button>
                                                 </div>
                                             </div>
