--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
                                             <div class="card shadow-sm">
                                                 <div class="card-body">
                                                     <div class="card-title">Lodge a Complaint</div>
-                                                    <button class="btn btn-secondary" id="lodgeComplaint"data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-arrow-right"></i></button>
+                                                    <button class="btn btn-secondary" id="lodgeComplaint"><i class="bi bi-arrow-right"></i></button>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4 mb-3">
                                             <div class="card shadow-sm">
                                                 <div class="card-body">
-                                                    <div class="card-title">Find </div>
-                                                    <button class="btn btn-secondary"><i class="bi bi-arrow-right"></i></button>
+                                                    <div class="card-title">Connect your device</div>
+                                                    <button class="btn btn-secondary"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-arrow-right"></i></button>
                                                 </div>
                                             </div>
                                         </div>
@@ -75,7 +75,7 @@
                                             <div class="card shadow-sm">
                                                 <div class="card-body">
                                                     <div class="card-title">Take Your Data With You</div>
-                                                    <button class="btn btn-secondary" id="" tyoe="button"><i class="bi bi-arrow-right"></i></button>
+                                                    <button class="btn btn-secondary" id="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-arrow-right"></i></button>
                                                 </div>
                                             </div>
                                         </div>
@@ -253,14 +253,14 @@
 
           <!-- Modal -->
       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-sm">
           <div class="modal-content">
             <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Coming Soon</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              ...
+              This Feature is Coming Soon
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
