--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                         <div class="col-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4 mb-3">
                                             <div class="card shadow-sm">
                                                 <div class="card-body">
-                                                    <div class="card-title">Connect Your Devices </div><!--Version 2.0 -->>
+                                                    <div class="card-title">Connect Your Devices </div><!--Version 2.0 -->
                                                     <button class="btn btn-secondary"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-arrow-right"></i></button>
                                                 </div>
                                             </div>
