--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
                         </div> -->
                       </div>
                       <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" tabindex="0">
-                        <div class="carret">
+                        <div class="carret" id="carretID">
+                          <div class="carret-child" id="carret-child">
                             <header>
                                 <div class="card text-bg-dark">
                                     <img src="./main.jpg" class="card-img" alt="...">
@@ -154,7 +155,7 @@
                                 <div class="row">
                                     <div class="col-4 col-md-4 col-lg-4 col-xl-4">
                                         <div class="card">
-                                            <img src="./booksBackground.jpg" class="card-img-top" alt="...">
+                                            <img src="./booksBackground.jpg" class="card-img-top" alt="..." height="200px">
                                             <div class="card-body">
                                               <p class="card-text">Environmental Studies</p>
                                               <button class="button" id="downloadButton">Click Here</button>
@@ -163,7 +164,7 @@
                                     </div>
                                     <div class="col-4 col-md-4 col-lg-4 col-xl-4">
                                         <div class="card">
-                                            <img src="./booksBackground.jpg" class="card-img-top" alt="...">
+                                            <img src="./booksBackground.jpg" class="card-img-top" alt="..." height="200px">
                                             <div class="card-body">
                                               <p class="card-text">Principle of Environment</p>
                                               <button class="button" id="downloadButton">Click Here</button>
@@ -172,7 +173,7 @@
                                     </div>
                                     <div class="col-4 col-md-4 col-lg-4 col-xl-4">
                                         <div class="card">
-                                            <img src="./booksBackground.jpg" class="card-img-top" alt="...">
+                                            <img src="./booksBackground.jpg" class="card-img-top" alt="..." height="200px">
                                             <div class="card-body">
                                               <p class="card-text">IAS Environment</p>
                                               <button class="button" id="downloadButton">Click Here</button>
@@ -197,6 +198,7 @@
                                 </div>
                             </main>
                             <footer class="d-flex justify-content-center text-secondary">Copyright @AgroSec 2024</footer> 
+                          </div>
                         </div>
                       </div>
                       <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab" tabindex="0">
@@ -265,7 +267,6 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
             </div>
           </div>
         </div>
