--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                       <h1>AgroSec</h1>
                       <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true"><i class="bi bi-view-list"></i></button>
                       <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false"><i class="bi bi-book-half"></i></button>
+                      <button class="nav-link" id="v-pills-marketplace-tab" data-bs-toggle="pill" data-bs-target="#v-pills-marketplace" type="button" role="tab" aria-controls="v-pills-marketplace" aria-selected="false"><i class="bi bi-shop"></i></button>
                       <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false"><i class="bi bi-house"></i></button>
                       <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill" data-bs-target="#v-pills-settings" type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false"><i class="bi bi-gear-wide-connected"></i></button>
                       <a href="signup.html" class="btn btn-success btn-sm mt-5 text-decoration-none">Logout</a>
@@ -101,7 +102,7 @@
                                         </div>
                                     </div>
                                 </main>
-                                <footer class="d-flex justify-content-center text-secondary">Copyright @AgroSec 2024</footer> 
+                                <footer class="d-flex justify-content-center align-items-center">Copyright @AgroSec 2024</footer> 
                             </div>
                         </div>
                         <div class="complain-data" id="complainData">
@@ -201,6 +202,12 @@
                           </div>
                         </div>
                       </div>
+                      <div class="tab-pane fade" id="v-pills-marketplace" role="tabpanel" aria-labelledby="v-pills-marketplace-tab" tabindex="0">
+                        <div class="row">
+                          <h1>This Page is Under Construction</h1>
+                          <img src="./construction workers/5123741.jpg" alt="">
+                        </div>
+                      </div>
                       <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab" tabindex="0">
                         <h3 class="mt-2">Bring the Love to Residence and Agriculture</h3>
                         <div class="row">
@@ -214,9 +221,9 @@
                               </div>
                             </div>
                           </div>
-                          <div class="col-6 col-md-6 col-lg-4 col-xl-4">
+                          <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
                             <div class="card h-100">
-                              <img src="./house1.jpg" class="card-img-top" alt="...">
+                              <img src="./house2.jpg" class="card-img-top" alt="...">
                               <div class="card-body">
                                 <h5 class="card-title">Kuje, Abuja</h5>
                                 <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
@@ -226,7 +233,57 @@
                           </div>
                           <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
                             <div class="card h-100">
+                              <img src="./house3.jpg" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                <h5 class="card-title">Akure, Ondo</h5>
+                                <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
+                                <a href="#" class="btn btn-green btn-sm">Check it</a>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
+                            <div class="card h-100">
+                              <img src="./house4.jpg" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                <h5 class="card-title">Akure, Ondo</h5>
+                                <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
+                                <a href="#" class="btn btn-green btn-sm">Check it</a>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
+                            <div class="card h-100">
                               <img src="./house1.jpg" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                <h5 class="card-title">Ikoyi Resettlement</h5>
+                                <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
+                                <a href="#" class="btn btn-green btn-sm">Check it</a>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
+                            <div class="card h-100">
+                              <img src="./house2.jpg" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                <h5 class="card-title">Kuje, Abuja</h5>
+                                <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
+                                <a href="#" class="btn btn-green btn-sm">Check it</a>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
+                            <div class="card h-100">
+                              <img src="./house3.jpg" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                <h5 class="card-title">Akure, Ondo</h5>
+                                <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
+                                <a href="#" class="btn btn-green btn-sm">Check it</a>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-2">
+                            <div class="card h-100">
+                              <img src="./house4.jpg" class="card-img-top" alt="...">
                               <div class="card-body">
                                 <h5 class="card-title">Akure, Ondo</h5>
                                 <p class="card-text"><small class="housetag">House</small><small class="housetag">Agriculture</small></p>
